fix fiat + ieo policy

--- a/src/app/fiat/fiat.component.html
+++ b/src/app/fiat/fiat.component.html
@@ -42,7 +42,7 @@
 						<h3>Secure payments</h3>
 					</div>
 					<div class="description-part">
-						<p>Payment solution powered by Singaporian bank with the same license as PayPal & Apple Pay.</p>
+						<p>Payment solution powered by Singapore bank with the same license as PayPal & Apple Pay.</p>
 					</div>			
 				</div>
 				<div class="benefits-item pg-small">
@@ -50,7 +50,7 @@
 						<h3>Low commissions</h3>
 					</div>
 					<div class="description-part">
-						<p>Free of charge SEPA outgoing payments./p>
+						<p>Free of charge SEPA outgoing payments.</p>
 					</div>			
 				</div>
 				<div class="benefits-item pg-small">
@@ -105,7 +105,7 @@
 						<span>2</span>
 					</div>
 					<div class="title-part">
-						<h5>Provide basic personal information.</h5>
+						<h5>Provide basic personal <br>information.</h5>
 					</div>
 				</div>
 				<div class="how-work-item">
@@ -122,10 +122,10 @@
 		<div class="add-info">
 			<div class="add-info-wr">
 				<div class="left-part">
-					<p>This is your personal account which you can use for instant fiat transfers to your Exrates trading account.</p>
+					<p>Account in FUG.SG is your personal account which you can use for instant fiat transfers to your Exrates trading account.</p>
 				</div>
 				<div class="right-part">
-					<p>A more detailed description of the conditions is available on our financial partner page - <a href="#">FUG</a>.</p>
+					<p>A more detailed description of the conditions is available on our financial partner page - <a href="#">FUG.SG</a>.</p>
 				</div>
 			</div>
 		</div>
