fix listing link

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/privacy-policy']">{{'Privacy Policy' | translate}}</a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/contacts']">{{'Contacts and Support' | translate}} </a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" [routerLink]="['/static/about-us']">{{'About us' | translate}}</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="https://coins.exrates.me/" target="blank">{{'Submit a coin for listing' | translate}}</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfHzqUAGF16cwfZT0c5-iokLzqNgqoLFRDmwlHGZng1hJPQoQ/viewform" target="blank">{{'Submit a coin for listing' | translate}}</a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" href="https://support.exrates.me/categories/faq" target="blank">{{'FAQ' | translate}}</a></li>
         <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li> -->
       </ul>
