start new ieo-detail

--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description4/ieo-description4.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description4/ieo-description4.component.html
@@ -1,3 +1,177 @@
-<p>
-  ieo-description4 works!
-</p>
+<div class="ieo_info">
+	<div class="ieo_info-wrapper">
+		<div class="text-info-block">
+			<h4>{{'Project Introduction' | translate}}</h4>
+			<p>The E-Tao is a worldwide e-commerce platform. In fact, it is an active - globally - mobile marketplace for blockchain-based purchases of a variety of goods and services from local suppliers, manufacturers, as well as private sellers. The platform is also designed to make virtual currency payments to buy and sell goods and services in the real world using cryptocurrency.</p>
+		</div>
+		<div class="text-info-block">
+			<h4>{{'Key features' | translate}}</h4>
+
+			<div class="key-features-wr">
+				<div class="infogr-wr">
+					<img src="assets/img/ieo/us.png" alt="">
+				</div>
+				<ul class="features-list">
+					<li class="features-list-item">
+						<p>1. An example of mass use of cryptocurrency</p>
+						<span>Exchanging with tokens for any goods and services. It is enough to hold on to your cryptocurrencies and expect endlessly!
+						You can buy real goods with the help of cryptocurrency. All goods on the E-Tao market are immediately available for payment with ETAO tokens. Also the E-Tao platform will present a limited number of pre-selected items, which users will only be able to pay with E-Tao tokens.</span>
+					</li>
+					<li class="features-list-item">
+						<p>2. Works all over the world</p>
+						<span>It provides access to rare Chinese goods and services from anywhere in the world.
+
+						</span>
+					</li>
+					<li class="features-list-item">
+						<p>3. All in one place</p>
+						<span>The E-Tao platform allows users to easily and securely connect to all online stores and control all purchases from a single account. Thousands of private ads for goods and services are collected in a single application</span>
+					</li>
+					<li class="features-list-item">
+						<p>4. Pay with cryptocurrency and get a discount!</p>
+						<span>Buying goods on the platform and paying with ETAO tokens, the buyer will receive a refund and the most advantageous offers.</span>
+					</li>
+					<li class="features-list-item">
+						<p>5. Secure purchases by reserving funds for a smart contract</p>
+						<span>Reservation of ETAO tokens when making a transaction solves the main problem of all such services - safety. The seller does not receive payment until the service / product is provided / delivered to them in proper form. It is very important to know that absolutely all transactions in cryptocurrency can be tracked using blockchains.
+						When you pay with the platform, you get additional protection for your transaction with smart contracts and your own E-Tao guarantee. Obviously, off-platform transactions are much less profitable because the platform offers a number of unique and profitable advantages.</span>
+					</li>
+					<li class="features-list-item">
+						<p>6. A world without boundaries</p>
+						<span>The E-Tao platform connects Chinese resellers with customers around the globe. Users from all over the world now have full access to these products and services from China.</span>
+					</li>
+				</ul>
+				
+			</div>
+			<div class="key-features-wr">
+				<div class="infogr-wr">
+					<img src="assets/img/ieo/sell.png" alt="">
+				</div>
+				<ul class="features-list">
+					<li class="features-list-item">
+						<p>1. Ability to trade with the world</p>
+						<span>Provide access to customers who can live anywhere in the world.</span>
+					</li>
+					<li class="features-list-item">
+						<p>2. It's easy to be the best salesman</p>
+						<span>The E-Tao platform provides a wide range of value-added services to online retailers and private sellers. This is, for example, a higher priority in search results, rating systems and home page appearances. And all this allows you to attract even more customers. These services, of course, can be paid for using ETAO tokens.</span>
+					</li>
+					<li class="features-list-item">
+						<p>3. Designed specifically for you</p>
+						<span>You can create your own personal online store on a platform that is ready to go. There's no need to spend your money developing your own platform or creating complex and expensive IT solutions. The E-Tao platform has already taken care of this and has all the resources you need to start trading instantly.</span>
+					</li>
+					<li class="features-list-item">
+						<p>4. Continuous customer support</p>
+						<span>A business owner can ask for help from our 24-hour support team. E-Tao's proprietary arbitration system solves any customer problems quickly and efficiently.</span>
+					</li>
+					<li class="features-list-item">
+						<p>5. Saving money</p>
+						<span>Savings due to lack of commissions in favor of payment systems when using ETAO tokens.</span>
+					</li>
+				</ul>
+				
+			</div>
+			
+		</div>
+
+
+		<!-- <div class="rating">
+			<div class="rating-title">
+				<h4>{{'Rating for ' | translate}}{{ieoToken || 'Token'}}</h4>
+			</div>
+			<div class="rating-item-wr">
+				<div class="rating-item">
+					<div class="rating-item-inner">
+						<div class="logo-rating">
+							<img src="assets/img/ieo/icomarks.svg" alt="">
+						</div>
+						<div class="rating-text">
+							<div class="rating-title-item">
+								<span>{{'Rating' | translate}}</span>
+							</div>
+							<div class="rating-value">
+								<span class="current-rating">9.8</span>
+								/
+								<span class="max-rating">10</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="rating-item">
+					<div class="rating-item-inner">
+						<div class="logo-rating">
+							<img src="assets/img/ieo/icobench.svg" alt="">
+						</div>
+						<div class="rating-text">
+							<div class="rating-title-item">
+								<span>{{'Rating' | translate}}</span>
+							</div>
+							<div class="rating-value">
+								<span class="current-rating">4.9</span>
+								/
+								<span class="max-rating">5</span>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="rating-item">
+					<div class="rating-item-inner">
+						<div class="logo-rating">
+							<img src="assets/img/ieo/icotop.svg" alt="">
+						</div>
+						<div class="rating-text">
+							<div class="rating-title-item">
+								<span>{{'Rating' | translate}}</span>
+							</div>
+							<div class="rating-value">
+								<span class="current-rating">A2</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="economics standart-pg">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>{{ieoToken || ''}}{{' Token sale and economics' | translate}}</h4>
+				</div>
+				<div class="economics-table">
+					<div class="economics-table-wr">
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>{{item.name}}</p>
+							</div>
+							<div class="table-item-value">
+								<p>{{item.desc}}</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="allocation standart-pg">
+			<div class="text-info-block">
+				<h4>{{'Token Allocaation' | translate}}</h4>
+			</div>
+			<div class="allocation-graph" id="allocation-graph">
+				<img src="assets/img/ieo/graph1.png" alt="">
+			</div>
+		</div>
+
+		<div class="schedule standart-pg">
+			<div class="text-info-block">
+				<h4>{{ieoToken || ''}}{{' token release schedule' | translate}}</h4>
+			</div>
+			<div class="schedule-graph" id="schedule-graph">
+				<img src="assets/img/ieo/graph2.png" alt="">
+			</div>
+		</div> -->
+
+	</div>
+</div>
+
