--- a/src/app/ieo/components/popup-policy/popup-policy.component.html
+++ b/src/app/ieo/components/popup-policy/popup-policy.component.html
@@ -4,16 +4,13 @@
 		<h6 class="popup__title tnx-head">Agreement of Token Purchase on X-Platform</h6>
 		<p class="popup__subtitle tnx-description">!This Agreement of Token Purchase on X-Platform ("Agreement") between you and Exrates.me governs your participating in purchase of any token ("token") from its token issuer via X-Platform - a service provided by Exrates.me. In this Agreement, "You" and "your" refers to you, the purchaser of the Token; “We”and”us” refer to Exrates.me, the X-Platform service provider.<br>Each time you purchase any token, you represent and assure Exrates.me that <br>i) you are an eligible purchaser of the token; <br>ii) have read and agree to the terms and conditions of this Agreement and any token purchase instructions and token sale information; <br>iii) you acknowledge, agree and understand token purchase is between you and its token issuer, where Exrates.me X-Platform only provide a place to facilitate your access to sale of token;<br>iv) you are not participating in the token sale for any investment, speculative or other financial purposes. <br>I Eligibility <br>i) you are at least 18 years of age and have the full capacity and authority to accept the Agreement. <br>ii) your participation of Token Purchase does not constitute a breach of any applicable laws;<br>iii) You are not a person of any sanctions list or equivalent maintained by the United States, the United Kingdom government or the European Union;<br>iv) You are not located in, or a citizen or resident of any restricted locations for the token purchase. <br>
 		<br>Restricted Locations <br>Japan, the USA, Canada, Cuba, Iran, North Korea, Sudan, Syria,Pakistan, the Government of Venezuela, Crimea or any other country to which the United States, the United Kingdom or the European Union embargoes goods or imposes similar sanctions. <br>
-		<br>II Token Purchase on X-Platform <br>1.Verifying Account
-You should create a Exrates.me account and verify your account to satisfy Exrates.me identity verification acquirement.
-
-2.Funding Account
-In order to participate in sale of token on X-Platform, you must deposit a certain amount of specified cryptocurrency or cryptocurrencies in your Exrates.me account or convert other coins to that coin(coins).
-
-The funds in your Exrates.me account should be your own and without dispute over the ownership and the funds should derive from a legitimate source.
-
-3.Purchase of Token
-The token purchase is between you and its token issuer.
+		<br>II Token Purchase on X-Platform <br>1.Verifying Account <br>You should create a Exrates.me account and verify your account to satisfy Exrates.me identity verification acquirement. <br>2.Funding Account
+<br>In order to participate in sale of token on X-Platform, you must deposit a certain amount of specified cryptocurrency or cryptocurrencies in your Exrates.me account or convert other coins to that coin(coins).
+<br>
+<br>The funds in your Exrates.me account should be your own and without dispute over the ownership and the funds should derive from a legitimate source.
+<br>
+<br>3.Purchase of Token
+<br>The token purchase is between you and its token issuer.
 
 During order placing time for a certain token, you may place an order to purchase the token. The order should be made as per the instruction of such order for the token on X-Platform.
 
