--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description3/ieo-description3.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description3/ieo-description3.component.html
@@ -73,105 +73,340 @@
 			</div>
 			
 		</div>
-
-
-		<!-- <div class="rating">
-			<div class="rating-title">
-				<h4>{{'Rating for ' | translate}}{{ieoToken || 'Token'}}</h4>
+		<div class="economics standart-pg">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>Celr token sale and economics</h4>
+					<p>The initial circulating emission of ETAO tokens is 255,000,000 ЕТАО (5.1%).
+						The crowdsale financing model consists of two stages: Private Sale and Public IEO Sale.
+						During the Private Sale of 100,000,000 ETAO tokens will be sold at a price of $0.0040 per token.
+						The E-Tao plans to raise $400,000 at the IEO stage. The IEO fund accounts for 2.4% of the total issue.
+						A total of 120,000,000 ETAO tokens will be released at a price of $0.0034 per token.
+					</p>
+				</div>
+				<div class="economics-table">
+					<div class="economics-table-wr">
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token Sale Start Time</p>
+							</div>
+							<div class="table-item-value">
+								<p>2019/03/19 2:00 PM (UTC)</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token Sale End Time</p>
+							</div>
+							<div class="table-item-value">
+								<p>When Hard Cap is reacherd or at 2019/03/24 2:00 PM (UTC)</p>
+							</div>
+						</div>
+						
+					</div>
+				</div>
 			</div>
-			<div class="rating-item-wr">
-				<div class="rating-item">
-					<div class="rating-item-inner">
-						<div class="logo-rating">
-							<img src="assets/img/ieo/icomarks.svg" alt="">
-						</div>
-						<div class="rating-text">
-							<div class="rating-title-item">
-								<span>{{'Rating' | translate}}</span>
-							</div>
-							<div class="rating-value">
-								<span class="current-rating">9.8</span>
-								/
-								<span class="max-rating">10</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="rating-item">
-					<div class="rating-item-inner">
-						<div class="logo-rating">
-							<img src="assets/img/ieo/icobench.svg" alt="">
-						</div>
-						<div class="rating-text">
-							<div class="rating-title-item">
-								<span>{{'Rating' | translate}}</span>
-							</div>
-							<div class="rating-value">
-								<span class="current-rating">4.9</span>
-								/
-								<span class="max-rating">5</span>
-							</div>
-						</div>
-					</div>
+		</div>
+		<div class="economics standart-pg">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>We plan to release 5,000,000,000 of ETAO tokens.</h4>
 
 				</div>
-				<div class="rating-item">
-					<div class="rating-item-inner">
-						<div class="logo-rating">
-							<img src="assets/img/ieo/icotop.svg" alt="">
-						</div>
-						<div class="rating-text">
-							<div class="rating-title-item">
-								<span>{{'Rating' | translate}}</span>
+				<div class="economics-table">
+					<div class="economics-table-wr">
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token name</p>
 							</div>
-							<div class="rating-value">
-								<span class="current-rating">A2</span>
+							<div class="table-item-value">
+								<p>Е-Тао</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token symbol</p>
+							</div>
+							<div class="table-item-value">
+								<p>EТАО</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token Type</p>
+							</div>
+							<div class="table-item-value">
+								<p>ERC-20</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token Contract Address</p>
+							</div>
+							<div class="table-item-value">
+								<p>0x5FaA6eB66Ed24b9C331634B0B12D28575B8fAbd9</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Decimals Places</p>
+							</div>
+							<div class="table-item-value">
+								<p>18</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Total emission</p>
+							</div>
+							<div class="table-item-value">
+								<p>5,000,000,000</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Initial reverse issue</p>
+							</div>
+							<div class="table-item-value">
+								<p>255,000,000 (5,1%)</p>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="economics standart-pg">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>Distribution of ETAO tokens </h4>
+				</div>
+				<div class="economics-table">
+					<div class="economics-table-wr">
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>IEO Date</p>
+							</div>
+							<div class="table-item-value">
+								<p>UTC+8 14:00, May 22, 2019</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>IEO Allocation</p>
+							</div>
+							<div class="table-item-value">
+								<p>2.4% of total issue</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>IEO Total Supply</p>
+							</div>
+							<div class="table-item-value">
+								<p>120,000,000 ЕТАО</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>IEO Token Price</p>
+							</div>
+							<div class="table-item-value">
+								<p>1 ЕТАО = $0.0034</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>IEO Goal</p>
+							</div>
+							<div class="table-item-value">
+								<p>$400,000</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Token Allocation</p>
+							</div>
+							<div class="table-item-value">
+								<p>Within 10 days after IEO ends</p>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="economics standart-pg">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>The Private Sale stage</h4>
+				</div>
+				<div class="economics-table">
+					<div class="economics-table-wr">
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Private Sale Date</p>
+							</div>
+							<div class="table-item-value">
+								<p>December 15, 2018</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Private Sale Allocation</p>
+							</div>
+							<div class="table-item-value">
+								<p>2.0% of total issue</p>
+							</div>
+						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Private Sale Token Price</p>
+							</div>
+							<div class="table-item-value">
+								<p>1 ETAO = $0.0040</p>
 							</div>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
 		<div class="economics standart-pg">
 			<div class="economics-inner">
 				<div class="text-info-block">
-					<h4>{{ieoToken || ''}}{{' Token sale and economics' | translate}}</h4>
+					<h4>Individual restrictions on the purchase</h4>
 				</div>
 				<div class="economics-table">
 					<div class="economics-table-wr">
 						<div class="economics-table-item">
 							<div class="table-item-description">
-								<p>{{item.name}}</p>
+								<p>Minimum</p>
 							</div>
 							<div class="table-item-value">
-								<p>{{item.desc}}</p>
+								<p>$10</p>
+							</div>
+							<div class="table-item-description">
+								<p>BTC/ETH/USDT</p>
 							</div>
 						</div>
+						<div class="economics-table-item">
+							<div class="table-item-description">
+								<p>Maximum</p>
+							</div>
+							<div class="table-item-value">
+								<p>$1000</p>
+							</div>
+							<div class="table-item-description">
+								<p>BTC/ETH/USDT</p>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="allocation standart-pg">
-			<div class="text-info-block">
-				<h4>{{'Token Allocaation' | translate}}</h4>
-			</div>
-			<div class="allocation-graph" id="allocation-graph">
-				<img src="assets/img/ieo/graph1.png" alt="">
+		<div class="economics standart-pg ">
+			<div class="economics-inner">
+				<div class="text-info-block">
+					<h4>Lockdown and release of tokens:</h4>
+				</div>
+				<div class="eco-gr-wr">
+					<div class="economics-table">
+						<div class="economics-table-wr">
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Public offering</p>
+								</div>
+								<div class="table-item-value">
+									<p>2.4%</p>
+								</div>
+								<div class="table-item-description">
+									<p>Unblocked</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Private Sale</p>
+								</div>
+								<div class="table-item-value">
+									<p>2%</p>
+								</div>
+								<div class="table-item-description">
+									<p>10% is unblocked, and the remaining 90% of tokens will be unblocked in batches of 7.5% every two months, after being listed on the stock exchange for two years.</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Foundation</p>
+								</div>
+								<div class="table-item-value">
+									<p>20%</p>
+								</div>
+								<div class="table-item-description">
+									<p>100% blocked for one year. Tokens will be unblocked in batches of 20% every two months after 1 year.</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Team</p>
+								</div>
+								<div class="table-item-value">
+									<p>10%</p>
+								</div>
+								<div class="table-item-description">
+									<p>100% blocked for one year. Tokens will be unblocked in batches of 20% every two months after 1 year.</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Consultant</p>
+								</div>
+								<div class="table-item-value">
+									<p>5.6%</p>
+								</div>
+								<div class="table-item-description">
+									<p>100% blocked for one year. Tokens will be unblocked in batches of 20% every two months after 1 year.</p>
+								</div>
+							</div>
+							<div class="economics-table-item">
+								<div class="table-item-description">
+									<p>Ecosystem</p>
+								</div>
+								<div class="table-item-value">
+									<p>50%</p>
+								</div>
+								<div class="table-item-description">
+									<p>5% will be used to form an ecosystem at an early stage after listing. 2.5% of the remaining tokens will be unblocked each month after 3 months of listing.</p>
+								</div>
+							</div>
+							
+						</div>
+					</div>	
+					<div class="graph-wr">
+						<img src="assets/img/ieo/graph-ieo.png" alt="">
+					</div>
+				</div>
 			</div>
 		</div>
+		<div class="text-info-block last-block">
+			<h4>CONCLUSIONS</h4>
+			<p>The E-Tao project has ambitious goals:</p>
 
-		<div class="schedule standart-pg">
-			<div class="text-info-block">
-				<h4>{{ieoToken || ''}}{{' token release schedule' | translate}}</h4>
-			</div>
-			<div class="schedule-graph" id="schedule-graph">
-				<img src="assets/img/ieo/graph2.png" alt="">
-			</div>
-		</div> -->
-
+			<p>- fully implement the concept of cryptocurrency liquidity by exchanging any token for everyday goods;
+				<br>- increase the involvement of the audience in the field of cryptocurrency by several times;
+				<br>- to accelerate the growth rate of the cryptocurrency market;
+				<br>- to revolutionize the world of e-commerce by shifting the mindset of users from the fiat model to the cryptocurrency model of the economy.
+			</p>				
+			<p>	The benefits of the E-Tao platform for retailers and customers are clear and significant.
+				<br>That’s why we are - with a high degree of confidence - predict that this project will be commercially successful and promising.
+				<br>The further development of the project will also stimulate the volatility of the majority of alternative cryptocurrencies, mitigate market volatility and - globally - increase interest in the cryptographic industry as a whole.
+				<br>The world today is irreversibly and rapidly changing. As the crypto industry also grows rapidly with the world, it will take some time and some - if not all - of today's e-commerce giants will realize the need to integrate structural modules into their platforms to guarantee payment in the cryptocurrency.
+				<br>When that time comes, E-Tao will confidently occupy a significant part of this promising commercial niche.
+				<br>You can simply observe the changes taking place and do nothing, but you can change the world with us, working for the common progress and prosperity of humanity as a whole. That’s why we need your support of the E-Tao Project!
+			</p>
+		</div>
 	</div>
 </div>
 
