--- a/src/assets/scss/pages/ieo/_economic.scss
+++ b/src/assets/scss/pages/ieo/_economic.scss
@@ -5,11 +5,18 @@
 	.text-info-block{
 		margin-bottom: 1.5em;
 		h4{
-
+			margin-bottom: 1em;
+		}
+		p{
+			font-weight: 400;
+			font-size: .7em;
+			line-height: 2;
+			color: #000000;
+			    margin-bottom: 4em;
 		}
 	}
 	.economics-table{
-		width: 100%;
+		
 		@media(max-width: 720px){
 			
 			overflow: auto;
@@ -23,7 +30,7 @@
 	.economics-table-item{
 		display: flex;
 		p{
-			font-size: .85em;
+			font-size: .9em;
 			color: #000;
 			line-height: 1.2;
 		}
