--- a/src/assets/scss/pages/ieo/_ieo-requirements.scss
+++ b/src/assets/scss/pages/ieo/_ieo-requirements.scss
@@ -7,7 +7,7 @@
 	.ieo-requirements-wr{
 		// width: calc(73.7em + 40px);
 		margin: 0 auto;
-		max-width: 1464px;
+		    max-width: 1411px;
 		padding: 1.15em 40px 1.3em 51px;
 
 		@media(max-width: 1200px){
@@ -106,12 +106,14 @@
 		}
 		p{
 			font-size: .91em;
+			font-weight: 500;
 		}
 		.requirement-description{
 			font-size: .8em;
 			margin-top: 1em;
 			line-height: 1.37;
 			color: #5E5F74;
+			font-weight: 500;
 			@media(max-width: 992px){
 				font-size: .9em;
 			}
